--- a/第二次上课代码7班.html
+++ b/第二次上课代码7班.html
@@ -14579,7 +14579,20 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="numpy%E5%AD%A6%E4%B9%A0">numpy&#23398;&#20064;<a class="anchor-link" href="#numpy%E5%AD%A6%E4%B9%A0">&#182;</a></h1>
+<h1 id="numpy%E5%AD%A6%E4%B9%A0-7%E7%8F%AD">numpy&#23398;&#20064; 7&#29677;<a class="anchor-link" href="#numpy%E5%AD%A6%E4%B9%A0-7%E7%8F%AD">&#182;</a></h1>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="%E4%BD%9C%E4%B8%9A%E8%AF%B4%E6%98%8E%EF%BC%9A">&#20316;&#19994;&#35828;&#26126;&#65306;<a class="anchor-link" href="#%E4%BD%9C%E4%B8%9A%E8%AF%B4%E6%98%8E%EF%BC%9A">&#182;</a></h3><h4 id="%E4%BB%A3%E7%A0%81%E6%B2%A1%E6%9C%89%E6%A0%87%E5%87%86%E7%AD%94%E6%A1%88%EF%BC%8C%E4%BD%86%E6%98%AF%E4%BB%A3%E7%A0%81%E6%9C%89%E5%A5%BD%E5%9D%8F%E4%B9%8B%E5%88%86%EF%BC%8C%E8%A1%A1%E9%87%8F%E5%A5%BD%E5%9D%8F%E7%9A%84%E6%A0%87%E5%87%86%EF%BC%9A">&#20195;&#30721;&#27809;&#26377;&#26631;&#20934;&#31572;&#26696;&#65292;&#20294;&#26159;&#20195;&#30721;&#26377;&#22909;&#22351;&#20043;&#20998;&#65292;&#34913;&#37327;&#22909;&#22351;&#30340;&#26631;&#20934;&#65306;<a class="anchor-link" href="#%E4%BB%A3%E7%A0%81%E6%B2%A1%E6%9C%89%E6%A0%87%E5%87%86%E7%AD%94%E6%A1%88%EF%BC%8C%E4%BD%86%E6%98%AF%E4%BB%A3%E7%A0%81%E6%9C%89%E5%A5%BD%E5%9D%8F%E4%B9%8B%E5%88%86%EF%BC%8C%E8%A1%A1%E9%87%8F%E5%A5%BD%E5%9D%8F%E7%9A%84%E6%A0%87%E5%87%86%EF%BC%9A">&#182;</a></h4><h4 id="1-%E4%BB%A3%E7%A0%81%E7%9A%84%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6">1 &#20195;&#30721;&#30340;&#26102;&#38388;&#22797;&#26434;&#24230;<a class="anchor-link" href="#1-%E4%BB%A3%E7%A0%81%E7%9A%84%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6">&#182;</a></h4><h4 id="2-%E4%BB%A3%E7%A0%81%E7%9A%84%E7%A9%BA%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6">2 &#20195;&#30721;&#30340;&#31354;&#38388;&#22797;&#26434;&#24230;<a class="anchor-link" href="#2-%E4%BB%A3%E7%A0%81%E7%9A%84%E7%A9%BA%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6">&#182;</a></h4><h4 id="3-%E4%BB%A3%E7%A0%81%E4%B9%A6%E5%86%99%E7%9A%84%E8%A7%84%E8%8C%83%EF%BC%9A%E6%98%AF%E5%90%A6%E7%AC%A6%E5%90%88%E8%AF%AD%E8%A8%80%E8%A7%84%E8%8C%83%EF%BC%8C%E5%91%BD%E5%90%8D%E6%98%AF%E5%90%A6%E6%B8%85%E6%99%B0%E6%98%93%E6%87%82%EF%BC%8C%E4%BB%A3%E7%A0%81%E6%98%AF%E5%90%A6%E6%95%B4%E6%B4%81-%E3%80%8A%E4%BB%A3%E7%A0%81%E6%95%B4%E6%B4%81%E4%B9%8B%E9%81%93%E3%80%8B%EF%BC%8C%E4%BB%A3%E7%A0%81%E6%98%AF%E5%90%A6%E9%87%8D%E5%A4%8D(%E4%BB%A3%E7%A0%81%E4%B8%8D%E8%A6%81%E9%87%8D%E5%A4%8D)">3 &#20195;&#30721;&#20070;&#20889;&#30340;&#35268;&#33539;&#65306;&#26159;&#21542;&#31526;&#21512;&#35821;&#35328;&#35268;&#33539;&#65292;&#21629;&#21517;&#26159;&#21542;&#28165;&#26224;&#26131;&#25026;&#65292;&#20195;&#30721;&#26159;&#21542;&#25972;&#27905; &#12298;&#20195;&#30721;&#25972;&#27905;&#20043;&#36947;&#12299;&#65292;&#20195;&#30721;&#26159;&#21542;&#37325;&#22797;(&#20195;&#30721;&#19981;&#35201;&#37325;&#22797;)<a class="anchor-link" href="#3-%E4%BB%A3%E7%A0%81%E4%B9%A6%E5%86%99%E7%9A%84%E8%A7%84%E8%8C%83%EF%BC%9A%E6%98%AF%E5%90%A6%E7%AC%A6%E5%90%88%E8%AF%AD%E8%A8%80%E8%A7%84%E8%8C%83%EF%BC%8C%E5%91%BD%E5%90%8D%E6%98%AF%E5%90%A6%E6%B8%85%E6%99%B0%E6%98%93%E6%87%82%EF%BC%8C%E4%BB%A3%E7%A0%81%E6%98%AF%E5%90%A6%E6%95%B4%E6%B4%81-%E3%80%8A%E4%BB%A3%E7%A0%81%E6%95%B4%E6%B4%81%E4%B9%8B%E9%81%93%E3%80%8B%EF%BC%8C%E4%BB%A3%E7%A0%81%E6%98%AF%E5%90%A6%E9%87%8D%E5%A4%8D(%E4%BB%A3%E7%A0%81%E4%B8%8D%E8%A6%81%E9%87%8D%E5%A4%8D)">&#182;</a></h4>
+<pre><code>        # don't repeat yourself !!! dry原则</code></pre>
+
 </div>
 </div>
 </div>
@@ -15221,6 +15234,17 @@ int8 | int64 | int64
 
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h1 id="numpy%E7%94%9F%E6%88%90%E9%9A%8F%E6%9C%BA%E6%95%B0/%E9%9A%8F%E6%9C%BA%E7%9F%A9%E9%98%B5">numpy&#29983;&#25104;&#38543;&#26426;&#25968;/&#38543;&#26426;&#30697;&#38453;<a class="anchor-link" href="#numpy%E7%94%9F%E6%88%90%E9%9A%8F%E6%9C%BA%E6%95%B0/%E9%9A%8F%E6%9C%BA%E7%9F%A9%E9%98%B5">&#182;</a></h1>
+</div>
+</div>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15229,7 +15253,7 @@ int8 | int64 | int64
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># numpy生成随机数/随机矩阵</span>
+<div class=" highlight hl-ipython3"><pre><span></span> 
 </pre></div>
 
      </div>
