--- a/第四次上课代码6班.html
+++ b/第四次上课代码6班.html
@@ -18217,7 +18217,7 @@ memory usage: 6.0+ KB
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[261]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[281]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># TODO 作业： 获取 年龄 &gt; 36 【或者】 年龄 &lt; 25 的数据</span>
@@ -18229,7 +18229,7 @@ memory usage: 6.0+ KB
     <span class="s2">&quot;Sex&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s2">&quot;male&quot;</span><span class="p">,</span> <span class="s2">&quot;male&quot;</span><span class="p">,</span> <span class="s2">&quot;female&quot;</span><span class="p">],</span>
     <span class="p">}</span>
 <span class="p">)</span>
-<span class="n">df</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="p">[(</span><span class="n">df</span><span class="p">[</span><span class="s1">&#39;Age&#39;</span><span class="p">]</span><span class="o">&gt;=</span><span class="mi">36</span><span class="p">)</span><span class="o">|</span><span class="p">(</span><span class="n">df</span><span class="p">[</span><span class="s1">&#39;Age&#39;</span><span class="p">]</span><span class="o">&lt;=</span><span class="mi">25</span><span class="p">)])</span>  <span class="c1"># 田海</span>
 </pre></div>
 
      </div>
@@ -18247,58 +18247,15 @@ memory usage: 6.0+ KB
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[261]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 
 
-
-<div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html">
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Sex</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>Braund, Mr. Owen Harris</td>
-      <td>22</td>
-      <td>male</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>Allen, Mr. William Henry</td>
-      <td>35</td>
-      <td>male</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>Bonnell, Miss. Elizabeth</td>
-      <td>58</td>
-      <td>female</td>
-    </tr>
-  </tbody>
-</table>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
+<pre>                       Name  Age     Sex
+0   Braund, Mr. Owen Harris   22    male
+2  Bonnell, Miss. Elizabeth   58  female
+</pre>
 </div>
-</div>
-
 </div>
 
 </div>
